Workaround for a bug on IE10 (desktop and mobile) and Safari: !important does not take precedence on rules inside media queries.

--- a/MultiColumns/themes/MultiColumns_template.less
+++ b/MultiColumns/themes/MultiColumns_template.less
@@ -1,81 +1,63 @@
 /* User vars */
 @screen-sm-min: 768px;
-@screen-sm-max: 992px;
 @screen-md-min: 992px;
-@screen-md-max: 1200px;
 @screen-lg-min: 1200px;
-@screen-lg-max: 1600px;
 
 @colcount-xsm: 1;
 @colcount-sm: 1;
 @colcount-md: 3;
 @colcount-lg: 5;
-@colcount-xlg: 5;
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
 .d-multi-columns {
-  display: block;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-.-d-multi-columns-force-display {
-  display: flex !important;
+	display: block;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 .-d-multi-columns-animate {
-  -moz-transition: -moz-transform @ANIMATION_DURATION @ANIMATION_STYLE;
-  -webkit-transition: -webkit-transform @ANIMATION_DURATION @ANIMATION_STYLE;
-  -ms-transition: -mstransform @ANIMATION_DURATION @ANIMATION_STYLE;
-  transition: transform @ANIMATION_DURATION @ANIMATION_STYLE;
+	-moz-transition: -moz-transform @ANIMATION_DURATION @ANIMATION_STYLE;
+	-webkit-transition: -webkit-transform @ANIMATION_DURATION @ANIMATION_STYLE;
+	-ms-transition: -mstransform @ANIMATION_DURATION @ANIMATION_STYLE;
+	transition: transform @ANIMATION_DURATION @ANIMATION_STYLE;
 }
 
 .-d-multi-columns-hidden {
-  display: none;
-  visibility: hidden;
+	display: none;
+	visibility: hidden;
 }
 
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 @-colcount-xsm: @colcount-xsm+1;
 @-colcount-sm: @colcount-sm+1;
 @-colcount-md: @colcount-md+1;
 @-colcount-lg: @colcount-lg+1;
-@-colcount-xlg: @colcount-xlg+1;
+
 
 // Extra small devices
 @media screen and (max-width: @screen-sm-min) {
-   .d-multi-columns > .d-linear-layout > *:nth-child(n+@{-colcount-xsm}){
+	.d-multi-columns > .d-linear-layout > .-d-multi-columns-mq:nth-child(n+@{-colcount-xsm}){
 	display: none;
-  }
+	}
 }
 
 // Small devices
-@media screen and (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-   .d-multi-columns > .d-linear-layout > *:nth-child(n+@{-colcount-sm}){
+@media screen and (min-width: @screen-sm-min) and (max-width: @screen-md-min) {
+	.d-multi-columns > .d-linear-layout > .-d-multi-columns-mq:nth-child(n+@{-colcount-sm}){
 	display: none;
-  }
+	}
 }
 
 // Medium devices
-@media screen and (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-   .d-multi-columns > .d-linear-layout > :nth-child(n+@{-colcount-md}){
+@media screen and (min-width: @screen-md-min) and (max-width: @screen-lg-min) {
+	.d-multi-columns > .d-linear-layout > .-d-multi-columns-mq:nth-child(n+@{-colcount-md}){
 	display: none;
-  }
+	}
 }
 
 // Large devices
-@media screen and (min-width: @screen-lg-min) and (max-width: @screen-lg-max) {
-   .d-multi-columns > .d-linear-layout > :nth-child(n+@{-colcount-lg}){
+@media screen and (min-width: @screen-lg-min) {
+	.d-multi-columns > .d-linear-layout > .-d-multi-columns-mq:nth-child(n+@{-colcount-lg}){
 	display: none;
-  }
-}
-
-// Extra large devices
-@media screen and (min-width: @screen-lg-max) {
-   .d-multi-columns > .d-linear-layout > :nth-child(n+@{-colcount-xlg}){
-	display: none;
-  }
-
+	}
 }
 
